# Dual_arm_control

./: .gitignore  README.md  dual_arm_repos.yaml  notes.txt
dual_arm_control/: CMakeLists.txt  package.xml  plugins.xml
dual_arm_control/bag_files/: ovveride_qos.yaml
dual_arm_control/config/: config.yaml  task.yaml
dual_arm_control/include/: geometry_helper.hpp  robots_object_system.hpp  robots_object_system_ext.hpp  robots_object_system_ext_forces.hpp  robots_spring_object_system.hpp  robots_spring_object_system_ext grasp.hpp  robots_spring_object_system_ext.hpp  robots_spring_object_system_ext_grasp.hpp
dual_arm_control/include/jacobian_h_to_xstate/: .gitignore  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  jacobian_WRh_to_oTg1_oTg2.cpp  jacobian_WRh_to_oTg1_oTg2.h  jacobian_WRh_to_oTg1_oTg2_data.h  jacobian_WRh_to_oTg1_oTg2_initialize.cpp  jacobian_WRh_to_oTg1_oTg2_initialize.h  jacobian_WRh_to_oTg1_oTg2_rtw.mk  jacobian_WRh_to_oTg1_oTg2_terminate.cpp  jacobian_WRh_to_oTg1_oTg2_terminate.h  jacobian_WRh_to_oTg1_oTg2_types.h  jacobian_h_to_b2Tb1.cpp  jacobian_h_to_b2Tb1.h  jacobian_h_to_b2Tb1_data.h  jacobian_h_to_b2Tb1_initialize.cpp  jacobian_h_to_b2Tb1_initialize.h  jacobian_h_to_b2Tb1_rtw.mk  jacobian_h_to_b2Tb1_terminate.cpp  jacobian_h_to_b2Tb1_terminate.h  jacobian_h_to_b2Tb1_types.h  jacobian_h_to_oTg1_oTg2.cpp  jacobian_h_to_oTg1_oTg2.h  jacobian_h_to_x_state_not_ext.cpp  jacobian_h_to_x_state_not_ext.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  tmwtypes.h
dual_arm_control/include/jacobian_h_to_xstate/examples/: main.cpp  main.h
dual_arm_control/include/jacobian_h_to_xstate/html/: report.mldatx
dual_arm_control/include/jacobian_h_to_xstate/interface/: _coder_jacobian_WRh_to_oTg1_oTg2_api.cpp  _coder_jacobian_WRh_to_oTg1_oTg2_api.h  _coder_jacobian_WRh_to_oTg1_oTg2_info.cpp  _coder_jacobian_WRh_to_oTg1_oTg2_info.h  _coder_jacobian_WRh_to_oTg1_oTg2_mex.cpp  _coder_jacobian_WRh_to_oTg1_oTg2_mex.h
dual_arm_control/include/robots/: LBRiiwa7Ext.hpp  MotomanSIA5FExt.hpp
dual_arm_control/launch/: aruco_detection.launch.py  aruco_detection_composable.launch.py  bringup_ekf_server.launch.py  bringup_iiwa_fingers.launch.xml  bringup_iiwa_slipping_control.launch.xml  bringup_slipping_client.launch.xml  iiwa_bringup_dual_arm.launch.py  launch_controllers_pose_force.launch.py  launch_rotation_nodes.launch.py  launch_rviz.launch.py  launch_static_camera_transform.launch.py  sim_iiwa.launch.py  sim_yaskawa.launch.py  test_dual_arm.launch.py  tf_transform_calibration_phase.launch.py  two_realsense.launch.py  two_robots.launch.py  two_robots_distributed.launch.py
dual_arm_control/launch/slipping_launch/: bringup_iiwa_slipping_control.launch.xml  bringup_slipping_client.launch.xml  bringup_yaskawa_fingers.launch.xml  bringup_yaskawa_slipping_control.launch.xml
dual_arm_control/rviz/: rviz.rviz  rviz_two_robots.rviz
dual_arm_control/src/: absolute_pose_publisher.cpp  cooperative_robots_server.cpp  demo_node.cpp  ekf_server.cpp  internal_force_control_node.cpp  joint_demux.cpp  joint_mux.cpp  object_model_simulator.cpp  object_pose_control_node.cpp  slipping_control_client.cpp  tf_publisher_from_topic.cpp  topic_publisher_from_tf.cpp
dual_arm_control/src/robots/: LBRiiwa7Ext.cpp  MotomanSIA5FExt.cpp
dual_arm_control/test/: ros_simulator.cpp  test_compile.cpp  test_ekf_client.cpp  test_estimation.cpp  test_estimation_ext.cpp  test_robots_spring_object_system.cpp  test_robots_spring_object_system_ext.cpp  test_robots_spring_object_system_ext_grasp.cpp  test_robots_system.cpp  test_robots_system_ext.cpp  test_robots_system_ext_forces.cpp
dual_arm_control/urdf/: iiwa_ibr_pivoting.xacro  sia5d_pivoting.xacro
dual_arm_control_interfaces/: CMakeLists.txt  package.xml
dual_arm_control_interfaces/srv/: EKFService.srv
matlab_simulations/: AdvancedSystem.m  CovarianceHandler.m  DiscreteSystem.m  EulerIntegrator.m  Helper.asv  Helper.m  KalmanFilter.asv  KalmanFilter.m  RobotsObjectSystem.asv  RobotsObjectSystem.m  RobotsObjectSystemExt.asv  RobotsObjectSystemExt.m  RobotsObjectSystemExtForces.asv  RobotsObjectSystemExtForces.m  RobotsSpringObjectSystem.asv  RobotsSpringObjectSystem.m  RobotsSpringObjectSystemExt.asv  RobotsSpringObjectSystemExt.m  RobotsSpringObjectSystemExtGraspEst.m  SimpleSystem.asv  SimpleSystem.m  cooperative_robots.m  cooperative_robots_6Dspring.asv  cooperative_robots_6Dspring.m  cooperative_robots_spring.m  cooperative_space_helper.m  create_robot_simple.m  create_robots.m  initial_state.mat  initial_state_grasp.mat  jacobian_h_to_b2Tb1.m  jacobian_h_to_oTg1_oTg2.m  jacobian_h_to_x_state.m  kalman_example.asv  kalman_example.m  kalman_objects_robot_test.asv  kalman_objects_robot_test.m  kalman_objects_with_calibration_.asv  kalman_objects_with_calibration_.m  kalman_objects_with_forces_state.asv  (+14 more)
matlab_simulations/additional_files/: .gitignore  Jacobian_Rp_to_Q.m  Jacobian_bQo_dot_to_bQo.cpp  Jacobian_bQo_dot_to_bQo.m  Jacobian_bQo_dot_to_oomegao.cpp  Jacobian_bQo_dot_to_oomegao.m  Jacobian_bpo_dot_to_bQo.cpp  Jacobian_bpo_dot_to_bQo.m  Jacobian_gifgi_beta_to_bQo.m  (+17 more)
matlab_simulations/additional_files/src/jacobian_wrh_to_otg1_otg2/: CMakeLists.txt  package.xml  packageInfo.mat
matlab_simulations/additional_files/src/jacobian_wrh_to_otg1_otg2/include/jacobian_wrh_to_otg1_otg2/: jacobian_WRh_to_oTg1_oTg2.h  jacobian_WRh_to_oTg1_oTg2_data.h  jacobian_WRh_to_oTg1_oTg2_initialize.h  jacobian_WRh_to_oTg1_oTg2_terminate.h  jacobian_WRh_to_oTg1_oTg2_types.h  jacobian_h_to_b2Tb1.h  jacobian_h_to_oTg1_oTg2.h  jacobian_h_to_x_state_not_ext.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  visibility_control.h
matlab_simulations/additional_files/src/jacobian_wrh_to_otg1_otg2/src/: jacobian_WRh_to_oTg1_oTg2.cpp  jacobian_WRh_to_oTg1_oTg2_initialize.cpp  jacobian_WRh_to_oTg1_oTg2_terminate.cpp  jacobian_h_to_b2Tb1.cpp  jacobian_h_to_oTg1_oTg2.cpp  jacobian_h_to_x_state_not_ext.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtw_proj.tmw
(+9 files in other folders)
